tests/ui/repr-align.stderr
error: aligned repr on struct that implements RefCast is not supported
 --> tests/ui/repr-align.rs:4:8
  |
4 | #[repr(align(2), C, align = "2")]
  |        ^^^^^^^^

error: aligned repr on struct that implements RefCast is not supported
 --> tests/ui/repr-align.rs:4:21
  |
4 | #[repr(align(2), C, align = "2")]
  |                     ^^^^^^^^^^^

error[E0539]: malformed `repr` attribute input
 --> tests/ui/repr-align.rs:4:1
  |
4 | #[repr(align(2), C, align = "2")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
  |                           |
  |                           expected this to be a list
  |
  = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>
